--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 body {
     height: 100vh;
     display: grid;
-    grid-template-columns: 57% 43%;
+    grid-template-columns: 79% 21%;
     grid-template-rows: 28px 7fr 24fr 6fr 58.51fr;
     grid-template-areas:
         "header            header"
@@ -24,7 +24,6 @@ body {
     grid-area: header;
     display: flex;
     justify-content: space-between;
-    /* border: 1px solid; */
 }
 div.top-nav div.right-section {
     display: flex;
@@ -33,20 +32,31 @@ div.top-nav .left-section {
     padding: 4px;
 }
 div.top-nav div.right-section div {
-    /* border: 1px solid red; */
     width: 40px;
     display: flex;
     justify-content: center;
     align-items: center;
+    transition: background-color 0.15s;
+    cursor: pointer;
+}
+div.top-nav div.right-section div:hover {
+    background-color: rgb(201, 201, 201);
+}
+div.top-nav div.right-section div:active {
+    background-color: rgb(194, 194, 194);
+}
+.close-btn:hover {
+    background-color: red !important;
+}
+.close-btn:active {
+    background-color: rgb(202, 0, 0) !important;
 }
 
 /* history-memory */
 .history-memory {
     grid-area: history;
-    border: 1px solid red;
 }
 .history-memory .history-memory-btns {
-    border: 1px solid;
     display: flex;
     gap: 20px;
     font-weight: 600;
@@ -56,7 +66,7 @@ div.top-nav div.right-section div {
     padding-bottom: 3px;
 }
 .history-memory-box {
-    padding: 24px 8px;
+    padding: 24px 0px;
     font-weight: 600;
 }
 
@@ -64,11 +74,9 @@ div.top-nav div.right-section div {
 .standard-section {
     grid-area: standard;
     display: flex;
+    align-items: center;
     gap: 16px;
     padding-left: 4px;
-}
-.standard-section div {
-    /* border: 1px solid; */
 }
 .standard-text {
     font-size: 20px;
@@ -78,7 +86,6 @@ div.top-nav div.right-section div {
 /* calculation-section */
 .calculation-section {
     grid-area: calculate;
-    /* border: 1px solid; */
     font-size: 56px;
     font-weight: 600;
     position: relative;
@@ -93,30 +100,37 @@ div.top-nav div.right-section div {
 .m-btns-section {
     grid-area: memory-btns;
     display: flex;
+    gap: 1px;
     font-weight: 600;
 }
 .m-btns-section .disable {
     color: gray;
 }
 .m-btns-section div {
-    border: 1px solid;
     width: 110px;
     display: flex;
     justify-content: center;
     align-items: center;
+    border-radius: 4px;
+    transition: background-color 0.15s;
+    cursor: pointer;
+}
+.m-btns-section div:hover {
+    background-color: rgb(201, 201, 201) !important;
+}
+.m-btns-section div:active {
+    background-color: rgb(194, 194, 194) !important;
 }
 
 /* key-section  */
 .key-section {
     grid-area: keys;
-    /* display: none; */
     display: grid;
     gap: 2px;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(6, 1fr);
 }
 .key-section div {
-    /* border: 1px solid red; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -126,7 +140,7 @@ div.top-nav div.right-section div {
     cursor: pointer;
 }
 .key-section div:hover {
-    background-color: rgb(210, 210, 210) !important;
+    background-color: rgb(201, 201, 201) !important;
 }
 .key-section div:active {
     background-color: rgb(194, 194, 194) !important;
